[package]
edition = "2021"
name = "juanstein-stm32"
version = "0.1.0"
authors = ["Juan.Guevara"]
resolver = "2"

[dependencies]
defmt = "0.3.10"
defmt-rtt = "0.4.1"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }

cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"

embassy-executor = { version = "0.7.0", features = ["task-arena-size-65536", "arch-cortex-m", "executor-thread", "defmt",  "executor-interrupt"] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime"] }

embassy-stm32 = { version = "0.2", features = ["defmt", "stm32l476rg", "unstable-pac", "memory-x", "time-driver-any", "exti"]  }


embedded-graphics = "0.8.1"
embassy-embedded-hal = "0.3.0"
embassy-sync = "0.6.2"
static_cell = "2.1.0"
embedded-hal = "1.0.0"
mipidsi = "0.9.0"
portable-atomic = "1.10.0"
micromath = "2.1.0"
mpu6050 = "0.1.6"


[patch.crates-io]
mipidsi = { git = "https://github.com/J-Guevara12/mipidsi.git"}
